--- a/css/header.css
+++ b/css/header.css
@@ -39,6 +39,10 @@ header h1 {
     color: #8FFCB9;
 }
 
+.navigation-bar ul li a:active {
+    color: #8FFCB9;
+}
+
 .navigation-bar ul li:nth-child(4) {
     width: 8rem;
     height: 2.5rem;
@@ -56,5 +60,5 @@ header h1 {
     color: black;
 
     border: 1px solid black;
-    background-color: aliceblue;
+    background-color: white;
 }
