--- a/css/project.css
+++ b/css/project.css
@@ -40,6 +40,10 @@
     margin-right: 1.5vw;
 }
 
+.project-content:hover {
+    box-shadow: 0 10px 7px 2px gray;
+}
+
 .project-content>img {
     display: block;
     width: 22vw;
@@ -77,6 +81,13 @@
     border-radius: 3rem;
 
     background-color: white;
+}
+
+.project-content>button:hover {
+    color: white;
+
+    border: 1px solid #8FFCB9;
+    background-color: #8FFCB9;
 }
 
 .project-content>button>img {
