--- a/css/retrospect.css
+++ b/css/retrospect.css
@@ -66,3 +66,8 @@
 
     border-radius: 20px;
 }
+
+.cards li:hover {
+    background: url(../images/mint-gray.jpeg);
+    background-size: cover;
+}
