--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,14 @@
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 a {
     text-decoration: none;
     color: #666666;
+}
+
+.navigation-bar ul {
+    list-style: none;
 }
