--- a/css/header.css
+++ b/css/header.css
@@ -2,40 +2,29 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-bottom: 1px solid #E9E9E9;
 }
 
 header>div {
     display: flex;
     justify-content: space-between;
-
     min-width: 1280px;
     max-width: 1920px;
-
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 1em;
 }
 
 header h1 {
-    font-size: 1.4vw;
+    font-size: 1.5em;
     font-weight: 900;
-
-    margin-top: 2vw;
-
+    margin-top: 1.3em;
     color: #8FFCB9;
-}
-
-.navigation-bar ul {
-    list-style: none;
 }
 
 .navigation-bar ul li {
     float: left;
     font-weight: 500;
-    margin-right: 3vw;
-    margin-top: 2vw;
-
+    margin: 2.2em 0 0 3.6em;
     color: #8FFCB9;
 }
 
@@ -43,22 +32,19 @@ header h1 {
     color: #8FFCB9;
 }
 
-.navigation-bar ul li:nth-child(4) {
+.navigation-bar ul li:last-child {
     width: 8rem;
-    height: 2.5rem;
-
-    margin-top: 1.3vw;
-    margin-bottom: 1vw;
-
-    padding: 0.7rem 0 0 1.6rem;
-    border-radius: 2rem;
+    height: 2.5em;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
+    padding: 0.7em 0 0 1.6em;
+    border-radius: 2em;
     background-color: #8FFCB9;
-    color: white;
+    color: #FFFFFF;
 }
 
-.navigation-bar ul li:nth-child(4):hover {
-    color: black;
-
+.navigation-bar ul li:last-child:hover {
     border: 1px solid black;
-    background-color: white;
+    color: #000000;
+    background-color: #FFFFFF;
 }
