--- a/css/profile.css
+++ b/css/profile.css
@@ -79,7 +79,7 @@
     border-top: 1px solid black;
 }
 
-.information-list div:nth-child(2) {
+.information-list ul:nth-child(2) {
     margin-left: 16em;
 }
 
