--- a/css/project.css
+++ b/css/project.css
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: center;
     margin-top: 1.6vw;
+    white-space: pre-wrap;
 }
 
 .project-content>button {
