--- a/css/project.css
+++ b/css/project.css
@@ -7,19 +7,19 @@
     flex-direction: column;
 
     width: 70%;
-    height: 23vw;
+    height: 24em;
     min-width: 1280px;
     max-width: 1920px;
     margin: 0 auto;
-    margin-top: 14.8vw;
-    padding: 0 1rem;
+    margin-top: 17em;
+    padding: 0 1em;
 }
 
 #project h2 {
-    font-size: 1.6vw;
+    font-size: 1.6em;
     display: block;
-    margin-top: 6.6vw;
-    margin-bottom: 1.9vw;
+    margin-top: 4.5em;
+    margin-bottom: 1em;
     color: #8FFCB9;
 }
 
@@ -28,8 +28,8 @@
 }
 
 .project-content {
-    margin-right: 1.5vw;
-    border-radius: 1.2rem;
+    margin-right: 1.7em;
+    border-radius: 1.2em;
     background-color: white;
 }
 
@@ -39,23 +39,23 @@
 
 .project-content>img {
     display: block;
-    width: 22vw;
-    height: 10vw;
+    width: 25em;
+    height: 11em;
     border-radius: 10px 10px 0 0;
 }
 
 .project-content>span {
-    font-size: 1.3rem;
+    font-size: 1.3em;
     font-weight: 700;
     display: flex;
     justify-content: center;
-    margin-top: 1.9vw;
+    margin-top: 1.7em;
 }
 
 .project-content>p {
     display: flex;
     justify-content: center;
-    margin-top: 1.6vw;
+    margin-top: 1.8em;
     white-space: pre-wrap;
 }
 
@@ -64,8 +64,8 @@
     justify-content: center;
     align-items: center;
     width: 10rem;
-    height: 3.2rem;
-    margin: 1.6vw 0 2vw 6.5vw;
+    height: 3.6em;
+    margin: 1.9em 0 2.4em 9em;
     border-radius: 3rem;
     background-color: white;
 }
@@ -78,7 +78,57 @@
 
 .project-content>button>img {
     position: relative;
-    width: 0.8rem;
-    height: 0.55rem;
-    left: 1.6rem;
+    width: 0.8em;
+    height: 0.55em;
+    left: 1.6em;
 }
+
+@media (max-width:1024px) {
+    #project {
+        height: 320vw;
+    }
+
+     #project>div {
+        min-width: 375px;
+        max-width: 1024px;
+        width: 90%;
+    }
+
+    #project h2{
+        font-size: 8vw;
+    }
+
+    .project-content-box {
+        flex-direction: column;
+    }
+
+    .project-content {
+        margin-bottom: 10vw;
+        width: 80vw;
+        height: 77vw;
+
+    }
+
+    .project-content>img {
+        width: 80vw;
+        height: 30vw;
+    }
+
+    .project-content>span {
+        font-size: 4.5vw;
+        margin: 1.7em 31vw 0 0;
+    }
+    
+    .project-content>p {
+        font-size: 4vw;
+        margin-top: 5vw;
+    }
+    
+    .project-content>button {
+        font-size: 2.5vw;
+        margin: 1vw 0 0 10vw;
+        width: 30vw;
+        height: 10vw;
+    }
+ }
+ 
