--- a/css/exprience.css
+++ b/css/exprience.css
@@ -51,3 +51,54 @@
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
 }
+
+.institution {
+    grid-area: institution;
+}
+
+.course {
+    grid-area: course;
+}
+
+.period {
+    grid-area: period;
+}
+
+@media (max-width:1024px) {
+    .exprience-box {
+        min-width: 375px;
+        max-width: 1024px;
+        width: 90%;
+    }
+
+    .exprience-box>h2 {
+        font-size: 10vw;
+        margin-top: 35vw;
+        padding-bottom: 2vw;
+        border-bottom: 4px solid white;
+        color: #8FFCB9;
+    }
+
+    .exprience {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: 
+        "institution course"
+        "institution period";
+        padding: 4vw 4vw;
+        height: 30vw;
+    }
+    
+    .exprience>span:first-child {
+        font-size: 5vw;
+    }
+    
+    .exprience>span:nth-child(2) {
+        font-size: 3.5vw;
+        margin-right: 0em;
+    }
+
+    .exprience>time {
+        font-size: 3.5vw;
+    }
+}
