--- a/css/profile.css
+++ b/css/profile.css
@@ -5,28 +5,25 @@
     min-width: 1280px;
     max-width: 1920px;
     margin: 0 auto;
-    margin-top: 14.8vw;
+    margin-top: 12em;
     padding: 0 1em;
 }
 
 .profile-img-box {
-    width: 19vw;
-    height: 19vw;
+    width: 38em;
+    height: 20em;
     border-radius: 50%;
     background-color: #D9D9D9;
+    margin-right: 5em;
 }
 
-.profile-box {
-    margin-left: 3.4em;
+#profile .name span:first-child {
+    font-size: 1.5em;
+    margin-right: 1em;
 }
 
-#profile .name {
-    display: inline;
-}
-
-#profile .name span {
-    font-weight: 700;
-    margin-left: 2.2em;
+#profile .name span:nth-child(2){
+    font-size: 0.8em;
 }
 
 #profile .name small {
@@ -56,8 +53,8 @@
     margin-right: 1em;
     padding: 0.8em 1.25em;
     border-radius: 1.875em;
-    background-color: #FFF6F4;
-    color: #FF6E53;
+    background-color: #E8F9F5;
+    color: #2FBBA0;
 }
 
 .profile-box section:nth-child(4) {
@@ -72,45 +69,87 @@
 }
 
 .information-list {
-    display: flex;
-    flex-direction: row;
     margin-top: 3.5em;
     padding-top: 2.9em;
     border-top: 1px solid black;
 }
 
-.information-list ul:nth-child(2) {
-    margin-left: 16em;
+.information-list ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    margin-left: 1em;
 }
 
-.telephone>address {
-    display: inline;
-    margin-left: 4.5em;
-    color: #666666;
+.information-list li {
+    padding-bottom: 1em;
+    width: 25em;
 }
 
-.blog {
-    margin-top: 1.125em;
+.information-list li dt, dd {
+    display: inline-block;   
 }
 
-.blog>a {
-    margin-left: 4.2em;
-    color: #666666;
-    word-break: break-all;
+.information-list li dt {
+    width: 6em;
 }
 
-.email>address {
-    display: inline;
-    margin-left: 4.5em;
-    color: #666666;
-}
+@media (max-width:1024px) {
+    #profile {
+        display: block;
+        width: 90%;
+        min-width: 375px;
+        max-width: 1024px;
+        margin: 0 auto;
+        padding: 1em;
+    }
+    .profile-img-box {
+        width: 50vw;
+        height: 50vw;
+        margin:5vw 0 5vw 20vw;
+    }
 
-.github {
-    margin-top: 1.125em;
-}
+    #profile .name {
+        font-size: 10vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 11vw;
+    }
 
-.github>a {
-    margin-left: 3.8em;
-    color: #666666;
-    word-break: break-all;
+    #profile .name span:nth-child(1) {
+        font-size: 10vw;
+    }
+
+    #profile .name span:nth-child(2) {
+        font-size: 5vw;
+        margin: 3vw 7vw 0 0;
+    }
+
+    #profile .name small {
+        font-size: 3vw;
+        font-weight: 400;
+        margin-right: 8vw;
+        white-space: pre-wrap;
+        line-height: 2em;
+    }
+
+    .profile-box section {
+        font-size: 3.3vw;
+        width: 80vw;
+        height: 10vw;
+        flex-wrap: wrap;
+    }
+    .profile-box section:nth-child(3) {
+        margin-bottom: 4.4vw;
+    }
+
+    .profile-box section:nth-child(4) {
+        margin-left: 15vw;
+    }
+
+    .information-list>ul {
+        display: block;
+    }
+    
 }
