--- a/css/retrospect.css
+++ b/css/retrospect.css
@@ -59,28 +59,34 @@
 }
 
 .cards li:nth-child(5) {
-    background: url(../images/mint.jpeg);
+    background: url(../images/retrospect6.png);
 }
 
 .cards li:nth-child(6) {
-    background: url(../images/mint.jpeg);
+    background: url(../images/retrospect5.png);
 }
 
 .cards li:nth-child(7) {
-    background: url(../images/mint.jpeg);
+    background: url(../images/retrospect7.jpeg);
 }
 
 .cards li:nth-child(8) {
-    background: url(../images/mint.jpeg);
+    background: url(../images/retrospect8.jpeg);
 }
 
 .card >a {
-    font-size: 1.5em;
+    font-size: 0;
     font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+    font
+}
+
+.card >a:hover {
+    font-size: 1.5em;
+    background-color: rgba(0, 0, 0, 0.5);
     color: #FFF;
 }
 
